--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	Font size: 15px;
+	Font-size: 15px;
 	font-family: 'Lexend Deca', sans-serif;
 	color: white;
 
@@ -18,12 +18,12 @@ body{
 .main-container{
 	display: flex;
 	flex-direction: row;
-	height: 30%;
-	width: 65%;
+	height: 22.5em;
+	width: 55em;
 	background-color: hsl(244, 38%, 16%);
 	padding: 0;
 	margin: 0;
-	border-radius: 10px;
+	border-radius: 5px;
 	overflow: hidden;
 }
 
@@ -93,8 +93,8 @@ body{
 	flex-wrap: nowrap;
 }
 
-.image-container > .img-desktop{
-	display: block;
+.img-desktop{
+	display: flex;
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -121,7 +121,7 @@ body{
 }
 
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 700px){
 	.main-container{
 		width: 95%;
 		height: 80%;
